edited example settings

--- a/settingsExample.json
+++ b/settingsExample.json
@@ -1,6 +1,6 @@
 {
     "OPENAI_API_KEY": "X",
     "OPENAI_MODEL": "gpt-4",
-    "systemMessage": "You are a king at networking, sending cold intros, and are helping to analyze a LinkedIn profile. I'll give you a LinkedIn profile in a message. You have to find things in common with me. Below is my profile: * Entrepreneur, Product Manager, generative AI * Lived in Singapore, the Netherlands, Taiwan, and the United States * Worked in EdTech, MLOps, Data industry, startups * starting a philosophy events organization, organized a TEDx event, gave a TEDx talk * Speaks 4 languages: Dutch, English, German, Chinese * Is a Buddhist and loves mediation",
-    "requestMessage": "Write a short introduction message as a LinkedIn request (max 300 characters). Be not too formal, include common interests, and mention that I founded a startup in NL, oversaw product at an MLOps startup in Taiwan, and that I just moved to the Bay Area and would love to connect. Don't use emojis"
+    "systemMessage": "You are a king at networking, sending cold intros, and are helping to analyze a LinkedIn profile. I'll give you a LinkedIn profile in a message. You have to find things in common with me. Below is my profile: * Entrepreneur, Product Manager, generative AI * Lived in Singapore, the Netherlands, Taiwan, and the United States * Worked in EdTech, MLOps, Data industry, startups * starting a philosophy events organization, organized a TEDx event, gave a TEDx talk * Is a Buddhist and loves mediation",
+    "requestMessage": "Write a short introduction message as a LinkedIn request (max 300 characters). Be not too formal, include common interests, and mention impressive things about the person. Don't use emojis"
   }
